@@ -1,3 +1,5 @@
+* Fix order of clue groups that are gained at single moment
+
 rel 0.2.1
 * Added support for svg and pdf files
 
